# ESP32_projects

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Makefile  README.md  get_chatid_bot.py  sweep.sh  template_wifi_secrets.cpp
00_starter/: README.md  platformio.ini
01_qrcode/: platformio.ini
02_garage/: platformio.ini
03_monitor/: platformio.ini
04_herd/: README.md  platformio.ini
05_heizung/: platformio.ini
06_wasserzaehler/: README.txt  platformio.ini
07_testbot/: platformio.ini
08_eink/: platformio.ini
09_psramcheck/: platformio.ini
10_mpu6050/: platformio.ini
11_esp32cam_servo/: platformio.ini
12_esp32cam_stepper/: platformio.ini
13_s0_reader/: platformio.ini
14_power_control/: platformio.ini
15_power_log_eink/: platformio.ini
16_main_control/: platformio.ini
17_heizungssteuerung/: platformio.ini
18_esp32_cam_xy6020l/: platformio.ini
19_CYD-project/: README.md  myapp.eez-project  myapp.eez-project-ui-state  platformio.ini
20_power_supply_controller/: platformio.ini
21_matter/: platformio.ini
22_WS2814_Lichtband/: platformio.ini
23_LED_matrix/: platformio.ini
24_demo_tdisplay/: platformio.ini
prj_00_starter/: platformio.ini
prj_01_qrcode/: platformio.ini
prj_02_garage/: README.md  min_spiffs.csv  platformio.ini  sdkconfig
prj_03_monitor/: CMakeLists.txt  platformio.ini
prj_04_herd/: platformio.ini
prj_05_heizung/: platformio.ini  upload.sh
prj_06_wasserzaehler/test_rs/: Cargo.toml  build.rs  evaluate.h  pointer_shape.h  read.h
prj_06_wasserzaehler/test_rs/src/: common.rs  lib.rs  main.rs
(+311 files in other folders)
